--- a/2FSemesterProjekt2024/wwwroot/css/site.css
+++ b/2FSemesterProjekt2024/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+.btn-eco-details {
+    background-color: #8b5e3c; /* Earthy brown */
+    color: white;
+    border: 2px solid #6f4426; /* Darker brown border */
+    padding: 3px 8px; /* Smaller padding */
+    font-size: 0.9rem; /* Slightly smaller font */
+    text-decoration: none;
+    border-radius: 5px;
+}
