--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -8,7 +8,7 @@
     <li class="nav-item"><a class="w-100 btn btn-eco-details p-2 mb-1 @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
     @if (hasExternalLogins)
     {
-        <li id="external-logins" class="w-100 btn btn-eco-details p-1"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
+        <li id="external-logins" class="w-100 btn btn-eco-details p-1 mb-1"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
     }
     <li class="nav-item"><a class="w-100 btn btn-eco-details p-2 mb-1 @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="w-100 btn btn-eco-details p-2 mb-1 @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
