--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -65,7 +65,7 @@
                     <span asp-validation-for="Input.Points" class="text-danger"></span>
                 </div>
             }
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-eco-edit">Save</button>
+            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-eco-edit p-2">Save</button>
         </form>
     </div>
 </div>
