--- a/2FSemesterProjekt2024/Pages/Bookning/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookning/Create.cshtml
@@ -42,7 +42,7 @@
                 <span asp-validation-for="Booking.BookingTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-eco-edit mt-2" />
             </div>
         </form>
     </div>
